Fix the navigation alignment issue. This fix ties together the UI/UX aspect of the entire navbar. It removes the align-start attribute for the logo, reduces the width of the search bar and adds two icons to the right div, It improves the overall look and feel of the page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,19 +9,27 @@
     grid-template-columns: 1fr 3fr 1fr;
     height: 72px;
 }
-.left {
+.left,
+.center,
+.right {
     display: flex;
     align-items: center;
 }
 .center {
     width: 100%;
-    display: flex;
-    align-items: center;
+}
+.nav-icons {
+    margin-right: 10px;
 }
 #search-input {
     height: 36px;
-    width: 90%;
+    width: 70%;
     outline: none;
+    padding-left: 10px;
+    color: #ccc;
+    font-size: 16px;
+    font-weight: lighter;
+    
 }
 #search-input:focus {
     outline: none;
@@ -33,13 +41,12 @@
     border: #cccccc 1px solid;
     border-left: none;
     background: #f8f8f8;
+    color: #000;
 }
 .right {
     height: 100%;
     width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end; 
+    justify-content: space-evenly; 
 }   
 img {
     height: auto;
@@ -49,7 +56,7 @@ img {
 #youtube-logo {
     width: 64px;
     height: auto;
-    align-self: flex-start;
+    
 }
 .sign-in-btn {
     text-decoration: none;
@@ -270,4 +277,7 @@ hr {
 }
 .video-boundary {
     width: 90%;
+}
+#nav-menu-icon {
+    margin-left: 16px;
 }
